<resources>
    <string name="app_name">GreenRate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_tap_your_name">Taper votre nom\n</string>
    <string name="please_tap_you_password">please type your password</string>
    <string name="log_in">log in\n</string>
    <string name="let_s_play">let\'s play</string>
    <string name="let_s_log_in">let\'s login</string>
    <string name="textlocalisation">Les informations sur votre localisation nous permettent de calculer de façon précise le bilan carbone du produit et de son emballage de sa fabrication à son achat</string>
    <string name="param_tre_de_l_application">Paramètre de l\'application</string>
    <string name="acc_s_appareil_photo">Accès Appareil Photo</string>
    <string name="g_olocalisation">Géolocalisation</string>
    <string name="pourquoi_nous_autorisez_l_acc_s">Pourquoi nous autorisez l\'accès ?</string>
    <string name="pr_f_rences_alimentaires">Préférences alimentaires</string>
    <string name="contribuer">Contribuer</string>
    <string name="nous_contacter">Nous contacter</string>
    <string name="param_tre">Paramètres</string>
    <string name="nos_partenaires">Nos partenaires</string>
    <string name="todo">TODO</string>
    <string name="chevron"><![CDATA[>]]></string>
    <string name="comparer_vos_produits">Comparer vos produits</string>
    <string name="produit_1">Produit 1</string>
    <string name="nutriscore">Nutriscore</string>
    <string name="bilan_carbone">Bilan carbone : </string>
    <string name="prix">Prix : </string>
    <string name="produit_2">Produit 2</string>
    <string name="carbone1">Carbone</string>
    <string name="carbone2">Carbone</string>
    <string name="prix1">Prix 1</string>
    <string name="prix2">Prix 2</string>
    <string name="historique_des_produits">Historique des produits</string>
    <string name="titregoeloc">Si vous ne nous autorisez pas l\'accès à votre géolocalisation ?</string>
    <string name="textgeoloc">Le suivis des produits s\'arrêtera à leur sortie de l\'usine, c\'est-à-dire, que le bilan carbone de leur trajet entre l\'usine et leur mise en rayon ne sera pas calculé</string>
    <string name="qualit_nutritionnelle">Qualitée nutritionnelle</string>
    <string name="ingredient">Ingrédients</string>
    <string name="environnement">Environnement</string>
    <string name="transformation_des_aliments">Transformation des aliments</string>
    <string name="label">Label</string>
    <string name="user">user</string>
    <string name="bonne_qualit_nutritionnelle">Bonne qualité nutritionnelle :</string>
    <string name="pas_important">Pas Important</string>
    <string name="important">Important</string>
    <string name="obligatoire">Obligatoire</string>
    <string name="faible_quantit_de_mati_re_grasse">Faible quantité de matière grasse :</string>
    <string name="faible_quantit_de_sel">Faible quantité de sel :</string>
    <string name="faible_quantit_de_sucre">Faible quantité de sucre :</string>
    <string name="faible_quantit_d_acide_gras_satur_e">Faible quantité d\'acide gras saturée :</string>
    <string name="ingr_dient">Ingrédient</string>
    <string name="vegan">Vegan :</string>
    <string name="v_g_tarien">Végétarien :</string>
    <string name="sans_gluten">Sans gluten :</string>
    <string name="bio">Bio :</string>
    <string name="commerce_quitable">Commerce équitable :</string>
    <string name="bienvenue_sur_greenrate">Bienvenue sur GreenRate</string>
    <string name="quel_est_votre_nom">Quel est votre nom ?</string>
    <string name="scan">Scan</string>
    <string name="start">Start</string>
    <string name="hello_greenrate">Bienvenue sur GreenRate !</string>
    <string name="nom_insta"> "@greenrate_officiel" </string>
    <string name="nous_envoyer_une_mail">Nous envoyer une mail</string>
    <string name="green_rate_app_gmail_com">green.rate.app@gmail.com</string>
    <string name="notre_compte_instagram">Notre compte instagram</string>
    <string name="rechercher">Rechercher</string>
    <string name="nom_du_produit">Nom du produit...</string>
    <string name="product">product</string>
    <string name="prixproduct">"  prix product"</string>
    <color name="green">#24CA33</color>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>