<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilFragment"
    android:background="@color/white"
    tools:ignore="Overdraw">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="180dp"
        android:layout_marginStart="30dp"
        android:text="@string/param_tre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="220dp"
        android:layout_marginStart="30dp"
        android:text="@string/pr_f_rences_alimentaires" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="260dp"
        android:layout_marginStart="30dp"
        android:text="@string/nous_contacter" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/profil"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="175dp"
        android:background="@android:color/transparent"
        android:text="@string/chevron"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="215dp"
        android:layout_marginStart="330dp"
        android:background="@android:color/transparent"
        android:textSize="20sp"
        android:text="@string/chevron"
        android:textStyle="bold"/>

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="255dp"
        android:background="@android:color/transparent"
        android:text="@string/chevron"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/backprofil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/backfleche"
        tools:ignore="ContentDescription,HardcodedText,PxUsage"
        android:contentDescription="TODO" />
    <Button
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/user"
        android:background="@android:color/transparent"
        android:textAlignment="center"/>


</FrameLayout>