<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/param_tre_de_l_application" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="120dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/acc_s_appareil_photo"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="290dp"
        android:layout_marginStart="290dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/g_olocalisation"
        android:layout_marginStart="20dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="290dp"
        android:layout_marginStart="290dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="450dp"
        android:text="@string/pourquoi_nous_autorisez_l_acc_s"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="480dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/les_informations_sur_votre_localisation_nous_permettent_de_calculer_de_fa_on_pr_cise_le_bilan_carbone_du_produit_et_de_son_emballage_de_sa_fabrication_son_achat" />


</FrameLayout>